# federaated

./: .gitignore  Dockerfile  docker-compose.yml
yolov8-nodeselection-pytorch/: pyproject.toml  run_code.sh
yolov8-nodeselection-pytorch/config/: config.yaml
yolov8-nodeselection-pytorch/project/: __init__.py  client_app.py  server_app.py  task.py
