[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yolov8-nodeselection-pytorch"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "project.server_app:app"
clientapp = "project.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
local-epochs = 5
learning-rate = 0.1
batch-size = 32

[tool.flwr.app.node.config]
num-partitions = 10  # Number of clients/partitions

[tool.flwr.app.power-config]
power-decay-per-epoch = 5  # درصد کاهش شارژ در هر اپوک
charging-power-increase = 10  # درصد افزایش شارژ در حالت شارژ
delta-c-discharging = -0.05  # کاهش قدرت محاسباتی در حالت دشارژ
delta-c-charging = +0.1  # افزایش قدرت محاسباتی در حالت شارژ
charging-probability= -0.3  # احتمال دلتا سی برای شارژ شدن گوشی

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true
